Product card fixed 100% on mobile and text mobile customized.

--- a/src/components/homepage-components/Products.css
+++ b/src/components/homepage-components/Products.css
@@ -6,10 +6,10 @@
   margin: auto;
 }
 
-.product-card:first-child h2 {
+.product-card h2 {
   font-size: var(--mainheading-29);
 }
-.product-card:first-child p {
+.product-card p {
   font-size: var(--middleheading-18);
   margin: 1rem 0;
 }
@@ -18,13 +18,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   margin-bottom: 2rem;
+  padding: 0 5px 0;
 }
 
 .product-card img {
-  width: 14rem;
-  height: 18rem;
+  width: 100%;
+  height: 20rem;
 }
 
 .product-card h6 {
@@ -39,12 +39,17 @@
 
 @media (width >= 640px) {
   .product-card {
-    flex: 0 0 calc(33% - 20px);
+    flex: 0 0 calc(33% - 0px);
   }
 }
 
 @media (width <= 760px) {
   .product-card {
+    align-items: center;
     flex: 0 0 calc(100% - 20px);
+  }
+
+  .product-card br {
+    display: none; /* Hide <br> tags on smaller screens */
   }
 }
